fix 2 column spacing

--- a/web/themes/interledger/css/styles.css
+++ b/web/themes/interledger/css/styles.css
@@ -353,6 +353,7 @@ section {
   gap: var(--space-m);
   justify-content: center;
   align-items: center;
+  padding-inline: 5%;
 }
 
 @media screen and (min-width: 840px) {
@@ -369,6 +370,10 @@ section {
   .layout--twocol-section.layout--twocol-section--50-50 > .layout__region--second {
     flex: 1 1 50%;
   }
+}
+
+.layout--twocol-section--50-50 section {
+  padding-inline: 0;
 }
 
 .views-element-container {
